--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,13 @@
-<button class="btn btn-primary">pea <i class="bi bi-check"></i></button>
-<app-heroes></app-heroes>
+<div class="container">
+  <h1>{{ title }}</h1>
+  <ul class="nav">
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/dashboard">Dashboard</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLink="/heroes">Heroes</a>
+    </li>
+  </ul>
+  <hr>
+  <router-outlet></router-outlet>
+</div>
